fixed overflow

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -17,6 +17,8 @@
     flex-direction: column;
     flex-grow: 1;
     scroll-behavior: smooth;
+    max-width: 100vw;
+    overflow-x: hidden;
 
     & .toolbar {
       display: flex;
